@startuml
Cliente <|-- ClienteCuentaCorriente
Cliente <|-- ClienteGrandesCompras
Cliente  --> Compra
Cliente  --> Localidad

class Localidad {
  - id : int
  - nombre : String
  - codigoPostal : String
}

abstract class Cliente {
  - id : int
  - dni : String
  - nombre : String
  - email : String
  - telefono : String
  - localidad : Localidad
  - compras : List<Compra>
  --
  + registrarCompra()
  + getCantidadCompras()
  + getTotalCompras()
}

class ClienteCuentaCorriente {
  - limiteMensual : double
  --
  + registrarCompra()
}

class ClienteGrandesCompras {
  - porcentajeDescuento : double
  --
  + registrarCompra()
}

class Compra {
  - id : int
  - fecha : Date
  - importe : double
}

@enduml